Bug #46, gh-pages - temp hide player controls image on small screens
* [iet:3813389] [iet:3907897]

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -57,6 +57,12 @@ p em, i { font-style: normal; }
     width: 480px; height: 22px; /* 961 x 44 px */
   }
 }
+/* Temparary - hide! */
+@media (max-width: 535px) {
+  .jumbotron .main-banner-splash img {
+    display: none;
+  }
+}
 
 
 /* Row: features, demo, download.
